grass (7.0.5~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * Drop patches applied upstream, refresh remaining patches.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 28 Aug 2016 03:29:06 +0200

grass (7.0.4-3) unstable; urgency=medium

  * Add upstream patch to fix FTBFS with GCC 6.
    (closes: #811886)
  * Add patch to fix spelling errors.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 30 Jun 2016 23:21:27 +0200

grass (7.0.4-2) unstable; urgency=medium

  * Add patches by Alexis Bienvenüe to make the build reproducible.
    (closes: #825092)

 -- Bas Couwenberg <sebastic@debian.org>  Tue, 24 May 2016 20:01:10 +0200

grass (7.0.4-1) unstable; urgency=medium

  * New upstream release.
  * Move from experimental to unstable.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 01 May 2016 16:09:45 +0200

grass (7.0.4~rc1-1~exp1) experimental; urgency=medium

  * New upstream release candidate.
  * Add template for x-grass7.
  * Drop explicit python-numpy dependency, included in ${python:Depends}
    via dh_numpy.
  * Have dh_python & dh_numpy act on specific packages only.
  * Use dynamic list of wxpython images files to move to use /usr/share.
  * Install additional icon sizes in hicolor icon theme.
  * Bump Standards-Version to 3.9.8, changes:
    additional icon sizes in hicolor theme.
  * Update copyright file, changes:
    - Add Jachym Ceppicky to copyright holders
    - Add license & copyright for mapcalc.tab.{c,h}
  * Drop patches applied upstream. Refresh remaining patches.
  * Add python-matplotlib to grass-gui Recommends for the several wxGUI tools.
  * Add patch to fix spelling errors.
  * Add python-termcolor to grass-core Recommends for g.search.modules.

 -- Bas Couwenberg <sebastic@debian.org>  Mon, 18 Apr 2016 23:57:37 +0200

grass (7.0.3-3) unstable; urgency=medium

  * Update dh_python2 override to call dh_numpy too.
  * Enable all hardening buildflags, except PIE (causes build failure).