@@ -2,6 +2,7 @@ grass (7.0.5~rc1-1) UNRELEASED; urgency=medium
 
   * New upstream release candidate.
   * Drop patches applied upstream, refresh remaining patches.
+  * Use SOURCE_DATE_EPOCH as random seed for reproducible builds.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sun, 28 Aug 2016 03:29:06 +0200
 
